logs/updater4pyi.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/updater4pyi'...
Listing './lib/python3.5/site-packages/updater4pyi/installers'...
Listing './lib/python3.5/site-packages/updater4pyi/installers/unix'...
Listing './lib/python3.5/site-packages/updater4pyi/installers/win'...
Compiling './lib/python3.5/site-packages/updater4pyi/upd_core.py'...
***   File "./lib/python3.5/site-packages/updater4pyi/upd_core.py", line 438
    os.chmod(os.path.join(extractto, zinfo.filename), 0755) # make executable
                                                         ^
SyntaxError: invalid token

Compiling './lib/python3.5/site-packages/updater4pyi/upd_iface.py'...
***   File "./lib/python3.5/site-packages/updater4pyi/upd_iface.py", line 85
    print "\n"
             ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/updater4pyi/util.py'...
***   File "./lib/python3.5/site-packages/updater4pyi/util.py", line 370
    raise RuntimeError, "This function is only implemented on Windows."
                      ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/updater4pyi-0.7.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
